--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Redirecting…</title>
+  <title>Play NoGuns</title>
   <script>
     // Extract all parameters
     const params = new URLSearchParams(window.location.search);
